--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -1,1 +1,26 @@
-<h1>new project page</h1>
+<div class="">
+  <div class="">
+    <div class="">
+
+      <h1>New Project</h1>
+      <form name= "projectsNew.projectForm" ng-submit="projectsNew.create()">
+        <div>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" ng-model="projectsNew.project.name">
+        </div>
+
+        <div>
+          <label for="body">Body</label>
+          <input type="text" id="body" name="body" ng-model="projectsNew.project.body">
+        </div>
+
+        <div>
+          <label for="base64">Image</label>
+          <input type="file" base64 name="base64" id="base64" ng-model="projectsNew.project.base64">
+        </div>
+
+          <button>Create Project</button>
+      </form>
+    </div>
+  </div>
+</div>
