--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,1 +1,6 @@
-<h1>show project page</h1>
+<h1>show project</h1>
+
+<h1>{{ projectsShow.project.name }}</h1>
+<h1>{{ projectsShow.project.createdBy }}</h1>
+<h1>{{ projectsShow.project.body }}</h1>
+<img class="" ng-src="{{ projectsShow.project.user.image_src }}" alt="{{ projectsShow.project.user.username }}">
