--- a/src/js/views/blogs/show.html
+++ b/src/js/views/blogs/show.html
@@ -1,6 +1,32 @@
-<h1>show blog</h1>
+<h1>Show blog</h1>
 
-<h1>{{ blogsShow.blog.name }}</h1>
-<h1>{{ blogsShow.blog.createdBy }}</h1>
-<h1>{{ blogsShow.blog.body }}</h1>
-<img class="" ng-src="{{ blogsShow.blog.user.image_src }}" alt="{{ blogsShow.blog.user.username }}">
+<h1>Name: {{ blogsShow.blog.name }}</h1>
+<h1>Created by (username): {{ blogsShow.blog.createdBy.username }}</h1>
+<h1>body of blog: {{ blogsShow.blog.body }}</h1>
+{{ blogsShow.blog }}
+<img class="" ng-src="{{ blogsShow.blog.imageSRC }}" alt="{{ blogsShow.blog.user.username }}">
+
+
+<!-- ======================COMMENTS============================= -->
+<section id="">
+    <div class="">
+      <h1>Comments</h1>
+      <div class="">
+        <ul>
+          <li ng-repeat="comment in blogsShow.blog.comments">{{ comment.body }} - <strong>{{ comment.user.username }}</strong>
+            <button ng-click="blogsShow.deleteComment(comment)" ng-if="main.isAuthenticated() && main.currentUser.id === comment.user.id">Delete</button>
+          </li>
+        </ul>
+      </div>
+<div class=""></div>
+      <div class="comments" ng-if="main.isAuthenticated()">
+        <h2>Add Comment</h2>
+        <br>
+        <form ng-submit="blogsShow.addComment()">
+          <textarea type="text" name="body" ng-model="blogsShow.comment.body"></textarea>
+          <br>
+          <button>Create</button>
+        </form>
+      </div>
+    </div>
+</section>
