--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -10,13 +10,18 @@
         </div>
 
         <div>
-          <label for="body">Body</label>
-          <input type="text" id="body" name="body" ng-model="projectsNew.project.body">
+          <label for="description">Description</label>
+          <input type="text" id="description" name="description" ng-model="projectsNew.project.description">
         </div>
 
         <div>
           <label for="base64">Image</label>
           <input type="file" base64 name="base64" id="base64" ng-model="projectsNew.project.base64">
+        </div>
+
+        <div>
+          <label for="link">Link</label>
+          <input type="file" link name="link" id="link" ng-model="projectsNew.project.link">
         </div>
 
           <button>Create Project</button>
