--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -20,8 +20,8 @@
         </div>
 
         <div>
-          <label for="link">Link</label>
-          <input type="file" link name="link" id="link" ng-model="projectsNew.project.link">
+          <label for="link">Link to project</label>
+          <input type="text" name="link" id="link" ng-model="projectsNew.project.link">
         </div>
 
           <button>Create Project</button>
