--- a/src/js/views/partials/projectShowModal.html
+++ b/src/js/views/partials/projectShowModal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3 class="modal-title">{{ projectsIndex.project.name }}</h3>
+  <h3 class="modal-title">{{ projectsIndex.project.name }} urghh work</h3>
 </div>
 <div class="modal-body">
   <h1>name: {{ projectsShow.project.name }}</h1>
