--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -1,1 +1,14 @@
-<h1>THIS IS A HOME PAGE</h1>
+<div class="homeImage container-full-bg"></div>
+
+<div class="title">
+  <div class="l-line"></div>
+  <div class="hannah">HANNAH</div>
+  <div class="wj">WYNN JONES</div>
+  <div class="l-line"></div>
+
+</div>
+
+<div class="info">
+
+
+</div>
