--- a/src/js/views/projects/index.html
+++ b/src/js/views/projects/index.html
@@ -22,7 +22,7 @@
     <div class="carousel-caption">
       <h4>{{ project.name }}</h4>
       <p><strong>{{ project.description }}</strong></p>
-      <button ng-click="projectsIndex.open({id: project.id})">Viewid</button>
+      <button ng-click="projectsIndex.open({ project })">Viewid</button>
       <button ng-click="projectsIndex.open()">View</button>
 
     </div>
