--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -1,14 +1,41 @@
 <div class="homeImage container-full-bg"></div>
 
+<div class="guidex"></div>
+<div class="guidey"></div>
+
 <div class="title">
   <div class="l-line"></div>
   <div class="hannah">HANNAH</div>
   <div class="wj">WYNN JONES</div>
   <div class="l-line"></div>
-
 </div>
 
-<div class="info">
+<div class="fs">junior web developer</div>
 
+<div class="line-proj"></div>
 
+<div class="project-div">
+  <h2>PROJECTS</h2>
+    <p>
+      <a href="www.google.com" target="_blank">GET YOUR OWN BACK!</a>
+    </p>
+    <p>
+      <a href="https://blooming-falls-61034.herokuapp.com" target="_blank">Rate my Bake</a>
+    </p>
+    <p>
+      <a href="https://guarded-refuge-81006.herokuapp.com/" target="_blank">Fabric</a>
+    </p>
+    <p>
+      <a href="https://sleepy-tor-76650.herokuapp.com/" target="_blank">Go Big or Go Home</a>
+    </p>
+    <p class="bl">
+      <a ui-sref="blogsIndex">Blog</a>
+    </p>
+</div>
+
+<div class="contact-icons">
+  <a href="https://www.linkedin.com/in/hannahwynnjones/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+  <a href="https://www.linkedin.com/in/hannahwynnjones/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+  <a href="https://twitter.com/HannahWynnJones" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+  <a href="mailto:hello@hannahwynnjones.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 </div>
