--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,11 +1,11 @@
-<div class="">
-  <div class="">
-    <div class="">
-      <h1>Login page</h1>
+<div class="box">
+  <div class="box-mid">
+    <div class="box-sm">
+      <h1>LOGIN</h1>
 
       <form name="auth.loginForm" ng-submit="auth.login()" novalidate>
 
-        <div class="">
+        <div class="auth-input">
           <label for="email">Email</label>
           <input type="text" name="email" id="email" ng-pattern="/@/" ng-model="auth.credentials.email" required>
         </div>
@@ -15,7 +15,7 @@
           <div style="color:red;" ng-message="pattern">Please enter a valid email.</div>
         </div>
 
-        <div class="">
+        <div class="auth-input">
           <label for="password">Password</label>
           <input type="password" name="password" id="password" ng-model="auth.credentials.password" required>
         </div>
