--- a/src/js/views/blogs/edit.html
+++ b/src/js/views/blogs/edit.html
@@ -1,27 +1,27 @@
-<h1>Edit a blog</h1>
-
-<div class="">
-  <div class="">
-    <div class="">
+<div class="box">
+  <div class="box-mid">
+    <div class="box-sm">
 
       <h1>Edit Blog</h1>
       <form name= "blogsEdit.blogForm" ng-submit="blogsEdit.update()">
-        <div>
+        <div class="auth-input">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" ng-model="blogsEdit.blog.name">
         </div>
 
-        <div>
+        <div class="auth-input">
           <label for="body">Body</label>
           <input type="text" id="body" name="body" ng-model="blogsEdit.blog.body">
         </div>
 
-        <div>
+        <div class="auth-input">
           <label for="base64">Image</label>
           <input type="file" base64 name="base64" id="base64" ng-model="blogsEdit.blog.base64">
         </div>
 
-          <button>Create Blog</button>
+        <div class="authButton">
+          <button>Update Blog</button>
+        </div>
       </form>
     </div>
   </div>
