--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,15 +6,13 @@
 body {
   padding: 20px;
   min-height: 100%;
-  margin: 0 auto -50px;
+  margin-bottom: -50px;
 }
 
 main {
-  // margin-top: 50px;
   margin: 0px, 200px, 0, 200px;
   text-align: center;
   display: block;
-
 }
 
 /////////////////  HOME   ////////////////////////////
@@ -26,14 +24,108 @@ main {
   height: 100vh;
 }
 
+//guidelines
+.guidex {
+  // border-style: solid;
+  // color: yellow;
+  width: 1000px;
+  top: 50%;
+  left: 10%;
+  position: absolute;
+}
+
+.guidey {
+  // border-style: solid;
+  // color: yellow;
+  height: 800px;
+  top: 10%;
+  left: 50%;
+  position: absolute;
+}
+
+.fs, .bl {
+  letter-spacing: 5px;
+  font-size: 30px;
+  font-family: 'Gurmukhi MN', cursive;
+  text-transform: uppercase;
+  font-weight: bold;
+  position: absolute;
+  text-align: center;
+
+  color: black;
+}
+
+.fs {
+  top: 57%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+}
+
+.bl {
+  margin-top: 20px;
+}
+
+.contact-icons {
+  top: 30%;
+  left: 58%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  a {
+    width:5%;
+    margin-left: 5px;
+    color: #000;
+    i {
+      font-size: 45px;
+      &.fa-file-text-o {
+        font-size: 28px;
+      }
+    }
+    &:hover {
+      color:#fff;
+    }
+  }
+}
+
+.line-proj {
+  border-style: solid;
+  height: 280px;
+  color: black;
+  top: 35%;
+  left: 50%;
+  position: absolute;
+}
+.project-div {
+  top: 35%;
+  left: 50%;
+  position: absolute;
+  // background-color: blue;
+  text-align: left;
+  color: black;
+  padding-left: 15px;
+  h2 {
+    margin-bottom: 17px;
+  }
+  p {
+    font-size: 16px;
+    a {
+      color: black;
+      text-decoration:none;
+      letter-spacing: 2px;
+      &:hover {
+        color:#fff;
+        text-decoration:none;
+      }
+    }
+  }
+}
 .title {
   font-size: 50px;
   font-family: 'Gurmukhi MN', cursive;
   position: absolute;
   text-align: center;
   width: 600px;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 35%;
   transform: translate(-50%, -50%);
   color: black;
   .l-line {
@@ -50,14 +142,129 @@ main {
   }
 }
 
-
 //////////////////    BLOGS INDEX  //////////////////////
+.blog-box-one {
+  margin: 50px 0 50px;
+  text-align: center;
+ul {
+
+  padding: 0;
+  .blog-box {
+    margin: 20px auto;
+    max-width: 400px;
+    text-align: center;
+    display: inline-block;
+    float: none;
+    .blog {
+      width: 100%;
+      padding: 20px;
+      box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+      border-style: solid;
+      border-color: grey;
+      border-width: 2px;
+      .blog-img {
+          width: 200px;
+          height: 200px;
+          overflow: hidden;
+          margin: 10px auto;
+          position: relative;
+          text-align: center;
+          border-radius: 7px;
+
+        img {
+            height: 500px;
+            text-align: center;
+            position: absolute;
+            margin: auto;
+            min-height: 100%;
+            min-width: 100%;
+            left: -100%;
+            right: -100%;
+            top: -100%;
+            bottom: -100%;
+        }
+      }
+    }
+  }
+}
+}
 //////////////////    BLOGS SHOW  //////////////////////
+.show-box {
+  h1 {
+    margin: 30px;
+    font-size: 60px;
+  }
+  h2 {
+    margin: 50px;
+  }
+  h3 {
+    font-family: 'Nunito', sans-serif;
+    margin-top: 20px;
+  }
+  img {
+    width: 400px;
+    margin: 20px;
+
+  }
+  textarea {
+    width: 500px;
+    margin: 10px;
+  }
+  li {
+    button {
+      height: 5px;
+      font-size: 10px;
+    }
+  }
+}
+
+
 //////////////////    BLOGS NEW  //////////////////////
+
+.blog-input {
+  height: 200px;
+  width: 100%;
+}
+
 //////////////////    BLOGS EDIT  //////////////////////
 //////////////////    PROJECTS INDEX  //////////////////////
 //////////////////    PROJECTS SHOW  //////////////////////
 //////////////////    PROJECTS NEW  //////////////////////
 //////////////////    PROJECTS EDIT  //////////////////////
+
+/////////////////  AUTH   /////////////////////
+
+  .box-sm {
+    font-family: 'Gurmukhi MN', cursive;
+    box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+    border-style: solid;
+    border-color: grey;
+    border-width: 2px;
+    position: absolute;
+    top: 40%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+    width: 400px;
+    margin: 50px;
+    padding: 50px;
+    label {
+      margin-right: 10px;
+    }
+    .auth-input {
+      margin: 5px;
+    }
+    // border-style: solid;
+    // border-color: black;
+    h1 {
+      text-align: center;
+      margin: 20px;
+    }
+    .authButton {
+      text-align: center;
+      margin-top: 20px;
+    }
+  }
+
 
 /////////////////    CONTACT   /////////////////////
