tinkering and styling

--- a/src/js/views/blogs/index.html
+++ b/src/js/views/blogs/index.html
@@ -5,7 +5,7 @@
 <div class="blog-box-one">
 
   <ul class="row">
-    <li ng-repeat="blog in blogsIndex.all" class="col-6 col-md-4 blog-box">
+    <li ng-repeat="blog in blogsIndex.all" class="col-md-6 col-lg-4 blog-box">
       <div class="blog">
         <h2>{{ blog.name }}</h2>
         <div class="blog-img">
