--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -22,6 +22,11 @@
         </div>
 
         <div>
+          <label for="github">Github link</label>
+          <input type="text" name="github" id="github" ng-model="projectsEdit.project.github">
+        </div>
+
+        <div>
           <label for="link">Link</label>
           <input type="text" name="link" id="link" ng-model="projectsEdit.project.link">
         </div>
