--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -20,6 +20,11 @@
         </div>
 
         <div class="auth-input">
+          <label for="github">Link to github</label>
+          <input type="text" name="github" id="github" ng-model="projectsNew.project.github">
+        </div>
+
+        <div class="auth-input">
           <label for="link">Link to project</label>
           <input type="text" name="link" id="link" ng-model="projectsNew.project.link">
         </div>
