--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -35,7 +35,7 @@
 
 <div class="contact-icons">
   <a href="https://www.linkedin.com/in/hannahwynnjones/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-  <a href="https://www.linkedin.com/in/hannahwynnjones/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+  <a href="https://github.com/hannahwynnjones" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
   <a href="https://twitter.com/HannahWynnJones" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
   <a href="mailto:hello@hannahwynnjones.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 </div>
