--- a/src/js/views/auth/register.html
+++ b/src/js/views/auth/register.html
@@ -52,10 +52,10 @@
           <div style="color:red;" ng-message="required">Confirmation is required </div>
         </div>
 
-        <div class="auth-input">
+        <!-- <div class="auth-input">
         <label for="base64">Image</label>
         <input type="file" base64 name="base64" id="base64" ng-model="auth.user.base64">
-      </div>
+      </div> -->
 
       <div class="authButton">
         <button >Register</button>
