--- a/src/js/views/partials/projectShowModal.html
+++ b/src/js/views/partials/projectShowModal.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
   <h3 class="modal-title">{{ projectsIndex.project.name }} urghh work</h3>
 </div>
 <div class="modal-body">
@@ -11,4 +11,4 @@
 <div class="modal-footer">
   <button class="btn btn-primary" ng-click="projectsIndex.close()">Back</button>
 
-</div>
+</div> -->
