--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,12 +1,28 @@
-<h1>show project</h1>
 
-<h1>name: {{ projectsShow.project.name }}</h1>
-<h2>created by: {{ projectsShow.project.createdBy.username }}</h2>
-<h3>description: {{ projectsShow.project.description }}</h3>
-<p>image:</p>
-<img class="" ng-src="{{ projectsShow.project.imageSRC }}" alt="{{ projectsShow.project.name }}">
+<div class="box">
+  <div class="show-box">
+
+  <h1>{{ projectsShow.project.name }}</h1>
+  <div class="container">
+
+    <div class="left">
+      <img ng-src="{{ projectsShow.project.imageSRC }}" alt="{{ projectsShow.project.name }}">
+    </div>
+
+    <div class="right">
+      <a href="{{ projectsShow.project.github }}" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href="{{ projectsShow.project.link }}" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+      <h4>{{ projectsShow.project.description }}</h4>
+    </div>
+  </div>
+  </div>
+
+  <button><a ui-sref="projectsIndex">Back to all projects</a></button>
+
+</div>
 
 
+<!--
 <div class="">
   <a ng-if="main.isAuthenticated() && projectsShow.project.createdBy.id === main.profilePageId" class="" ui-sref="projectsEdit({ id: projectsShow.project.id})">Edit Item</a>
   <a ng-if="main.isAuthenticated() && projectsShow.project.createdBy.id === main.profilePageId" class="" ng-click="projectsShow.delete()">Delete Item</a>
@@ -18,4 +34,4 @@
 
 <h4>without auth</h4>
   <a ui-sref="projectsEdit({ id: projectsShow.project.id})">Edit Item</a>
-<button class=" " ng-click="projectsShow.delete()" >Delete</button>
+<button class=" " ng-click="projectsShow.delete()" >Delete</button> -->
