--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,6 +57,18 @@ h1, h2 {
   }
 }
 
+.navbar-collapse {
+  background-color: rgba(250, 250, 250, 1);
+  text-align: left;
+}
+
+@media(min-width: 768px){
+    .navbar > .container {
+      max-width: 100%;
+      padding: 0;
+    }
+}
+
 //////////////////////////////FOOTER //////////////////////////////////
 .footer {
   right: 0;
