--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,6 @@
 @import 'main';
+@import 'home';
+@import 'responsive';
 // @import 'templates';
 // @import 'colorSchemes';
 // @import 'responsive';
@@ -13,133 +15,6 @@ main {
   margin: 0px, 200px, 0, 200px;
   text-align: center;
   display: block;
-}
-
-/////////////////  HOME   ////////////////////////////
-
-.homeImage {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1484108678824-e6543e2e4230?dpr=1&auto=format&fit=crop&w=1199&h=797&q=80&cs=tinysrgb&crop=&bg=');
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
-//guidelines
-.guidex {
-  // border-style: solid;
-  // color: yellow;
-  width: 1000px;
-  top: 50%;
-  left: 10%;
-  position: absolute;
-}
-
-.guidey {
-  // border-style: solid;
-  // color: yellow;
-  height: 800px;
-  top: 10%;
-  left: 50%;
-  position: absolute;
-}
-
-.fs, .bl {
-  letter-spacing: 5px;
-  font-size: 30px;
-  font-family: 'Gurmukhi MN', cursive;
-  text-transform: uppercase;
-  font-weight: bold;
-  position: absolute;
-  text-align: center;
-
-  color: black;
-}
-
-.fs {
-  top: 57%;
-  left: 30%;
-  transform: translate(-50%, -50%);
-}
-
-.bl {
-  margin-top: 20px;
-}
-
-.contact-icons {
-  top: 30%;
-  left: 58%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  a {
-    width:5%;
-    margin-left: 5px;
-    color: #000;
-    i {
-      font-size: 45px;
-      &.fa-file-text-o {
-        font-size: 28px;
-      }
-    }
-    &:hover {
-      color:#fff;
-    }
-  }
-}
-
-.line-proj {
-  border-style: solid;
-  height: 280px;
-  color: black;
-  top: 35%;
-  left: 50%;
-  position: absolute;
-}
-.project-div {
-  top: 35%;
-  left: 50%;
-  position: absolute;
-  // background-color: blue;
-  text-align: left;
-  color: black;
-  padding-left: 15px;
-  h2 {
-    margin-bottom: 17px;
-  }
-  p {
-    font-size: 16px;
-    a {
-      color: black;
-      text-decoration:none;
-      letter-spacing: 2px;
-      &:hover {
-        color:#fff;
-        text-decoration:none;
-      }
-    }
-  }
-}
-.title {
-  font-size: 50px;
-  font-family: 'Gurmukhi MN', cursive;
-  position: absolute;
-  text-align: center;
-  width: 600px;
-  top: 40%;
-  left: 35%;
-  transform: translate(-50%, -50%);
-  color: black;
-  .l-line {
-    border-style: solid;
-    width: 360px;
-    margin: 5px auto;
-  }
-  .hannah {
-    letter-spacing: 18px;
-    font-size: 60px;
-  }
-  .wj {
-    letter-spacing: 2px;
-  }
 }
 
 //////////////////    BLOGS INDEX  //////////////////////
@@ -229,6 +104,41 @@ ul {
 //////////////////    BLOGS EDIT  //////////////////////
 //////////////////    PROJECTS INDEX  //////////////////////
 //////////////////    PROJECTS SHOW  //////////////////////
+
+.container {
+    position: relative;
+    width: 1000px;
+    max-height: 800px;
+    background: red;
+    overflow: hidden; /*To get your parent to respect the floated divs*/
+}
+
+.left {
+  position: relative;
+  // width: 40%;
+  height: 800px;
+  background: green;
+  float: left;
+  margin: 30px 0 30px 30px;
+  img {
+    width: 300px;
+  }
+}
+
+.right {
+  float: right;
+  background: orange;
+  position: relative;
+  width: 55%;
+  max-height: 800px;
+  margin: 40px 0 40px 0;
+  i {
+    font-size: 30px;
+    margin: 20px;
+  }
+
+}
+
 //////////////////    PROJECTS NEW  //////////////////////
 //////////////////    PROJECTS EDIT  //////////////////////
 
