markdown working, added about page

--- a/src/js/views/blogs/new.html
+++ b/src/js/views/blogs/new.html
@@ -11,7 +11,9 @@
 
         <div class="auth-input">
           <label for="body">Body</label>
-          <input class="blog-input" type="text" id="body" name="body" ng-model="blogsNew.blog.body">
+          <textarea name="description" ng-model="blogsNew.blog.body" rows="10"></textarea>
+
+          <!-- <input class="blog-input" type="text" id="body" name="body" ng-model="blogsNew.blog.body"> -->
         </div>
 
         <div class="auth-input">
