--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -11,7 +11,9 @@
 
         <div class="auth-input">
           <label for="description">Description</label>
-          <input type="text" id="description" name="description" ng-model="projectsNew.project.description">
+          <!-- <input type="text" id="description" name="description" ng-model="projectsNew.project.description"> -->
+          <textarea name="description" ng-model="projectsNew.project.description" rows="10"></textarea>
+
         </div>
 
         <div class="auth-input">
