--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,26 +1,32 @@
-
 <div class="box">
   <div class="show-box">
+    <div class="proj-show-box">
 
-  <h1>{{ projectsShow.project.name }}</h1>
-  <div class="container">
+    <h1>{{ projectsShow.project.name }}</h1>
 
-    <div class="left">
-      <img ng-src="{{ projectsShow.project.imageSRC }}" alt="{{ projectsShow.project.name }}">
+    <div class="container">
+      <div class="container2">
+
+        <div class="left">
+          <img ng-src="{{ projectsShow.project.imageSRC }}" alt="{{ projectsShow.project.name }}">
+        </div>
+
+        <div class="right">
+          <a href="{{ projectsShow.project.github }}" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a href="{{ projectsShow.project.link }}" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
+
+          <zero-md text="{{projectsShow.project.description}}">
+           <div class="md-html markdown-div"></div>
+          </zero-md>
+
+        </div>
+      </div>
     </div>
 
-    <div class="right">
-      <a href="{{ projectsShow.project.github }}" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-      <a href="{{ projectsShow.project.link }}" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a>
-      <h4>{{ projectsShow.project.description }}</h4>
-    </div>
-  </div>
-  </div>
+    <button><a ui-sref="projectsIndex">Back to all projects</a></button>
 
-  <button><a ui-sref="projectsIndex">Back to all projects</a></button>
-
+  </div>
 </div>
-
 
 <!--
 <div class="">
