--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,6 +65,7 @@ ul {
 }
 //////////////////    BLOGS SHOW  //////////////////////
 .show-box {
+
   h1 {
     margin: 30px;
     font-size: 60px;
@@ -77,9 +78,15 @@ ul {
     margin-top: 20px;
   }
   img {
-    width: 400px;
+    height: 600px;
     margin: 20px;
-
+  }
+  .markdown-div {
+    text-align: left;
+    width: 1000px;
+    margin: 0 auto;
+    // box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+    padding: 10px;
   }
   textarea {
     width: 500px;
@@ -91,12 +98,15 @@ ul {
       font-size: 10px;
     }
   }
+  button {
+    margin: 10px;
+  }
 }
 
 
 //////////////////    BLOGS NEW  //////////////////////
 
-.blog-input {
+textarea {
   height: 200px;
   width: 100%;
 }
@@ -104,41 +114,66 @@ ul {
 //////////////////    BLOGS EDIT  //////////////////////
 //////////////////    PROJECTS INDEX  //////////////////////
 //////////////////    PROJECTS SHOW  //////////////////////
-
-.container {
-    position: relative;
+.proj-show-box {
+  .container {
+    background-color: #9A0A35;
+    box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
     width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+    .container2 {
+      z-index: 2;
+      background-color: rgba(255,255,255,0.9);
+      position: relative;
+      width: 950px;
+      height: 100%;
+      overflow: hidden;
+      margin: 25px auto;
+      text-align: center;
+      }
+
+  .left {
+    position: relative;
+    // width: 40%;
+    height: 100%px;
+    float: left;
+    margin: 30px 0 30px 30px;
+    img {
+      width: 300px;
+    }
+  }
+
+  .right {
+    float: right;
+    position: relative;
+    width: 55%;
     max-height: 800px;
-    background: red;
-    overflow: hidden; /*To get your parent to respect the floated divs*/
-}
+    margin: 40px 0 40px 0;
+    .markdown-div {
+      margin:5px 0;
+      padding:3px;
+      p {
+        width:98%;
+        margin:5px 0;
+        padding:1%;
+        height: 100%;
+        word-break: break-all;
+        text-align: left;
+        }
+      }
+    i {
+      font-size: 30px;
+      margin: 20px;
+    }
 
-.left {
-  position: relative;
-  // width: 40%;
-  height: 800px;
-  background: green;
-  float: left;
-  margin: 30px 0 30px 30px;
-  img {
-    width: 300px;
-  }
-}
-
-.right {
-  float: right;
-  background: orange;
-  position: relative;
-  width: 55%;
-  max-height: 800px;
-  margin: 40px 0 40px 0;
-  i {
-    font-size: 30px;
-    margin: 20px;
   }
 
 }
-
+button {
+  margin: 20px;
+}
+}
 //////////////////    PROJECTS NEW  //////////////////////
 //////////////////    PROJECTS EDIT  //////////////////////
 
@@ -177,4 +212,137 @@ ul {
   }
 
 
-/////////////////    CONTACT   /////////////////////
+/////////////////    ABOUT   /////////////////////
+
+.about-show-box {
+  .container {
+    background-color: #9A0A35;
+    box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
+    width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+    .container2 {
+      z-index: 2;
+      background-color: rgba(255,255,255,0.9);
+      position: relative;
+      width: 950px;
+      height: 100%;
+      overflow: hidden;
+      margin: 25px auto;
+      text-align: center;
+      }
+
+  .left {
+    display: inline-block;
+    position: relative;
+    // width: 40%;
+    height: 100%;
+    float: left;
+    margin: 30px 0 30px 30px;
+    img {
+      border-radius: 100px;
+      border-style: solid;
+      width: 300px;
+      height: 100%;
+      margin-bottom: 50px;
+    }
+    .contact-icons {
+      // background-color: yellow;
+      position: absolute;
+      width: 500px;
+      padding-left: 100px;
+      margin-top: 30px;
+      top: 92%;
+      left: 35%;
+      transform: translate(-50%, -50%);
+      a {
+      margin: 0 auto;
+      text-align: center;
+        i {
+          font-size: 30px;
+          margin: 20px;
+        }
+      }
+    }
+  }
+
+  .right {
+    display: inline-block;
+    float: right;
+    position: relative;
+    width: 55%;
+    max-height: 800px;
+    margin: 40px 0 40px 0;
+    text-align: center;
+    margin: 0 auto;
+    h1 {
+      font-size: 30px;
+      text-transform: capitalize;
+      text-align: left;
+    }
+
+
+    p {
+      text-align: left;
+      margin: 30px;
+    }
+    h3 {
+      text-align: left;
+      margin-left: 30px;
+      font-family: 'Gurmukhi MN', cursive;
+    }
+  }
+.imageb {
+  display: inline-block;
+  position: absolute;
+  img {
+    height: 280px;
+    margin-left: -50px;
+  }
+}
+.skills-div {
+  width: 440px;
+  margin-bottom: 100px;
+  .skills {
+    ul {
+      list-style:none;
+      padding: 0;
+      li {
+      }
+    }
+  }
+  .soft {
+    width: 200px;
+    text-align: left;
+    display: inline-block;
+    float: right;
+    padding-left: 3px;
+  }
+  .line-skill {
+    border-style:solid;
+    border-width: thin;
+    margin-left: 3px;
+    color: black;
+    height: 355px;
+    width: 1px;
+    top: 10%;
+    // left: 50%;
+    position: relative;
+    display: inline-block;
+    float: left;
+  }
+  .tech {
+    width: 230px;
+    text-align: right;
+    display: inline-block;
+    float: left;
+    padding-right: 3px;
+
+  }
+
+}
+}
+
+
+}
