--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -27,7 +27,7 @@
 
   </div>
 </div>
-
+</div>
 <!--
 <div class="">
   <a ng-if="main.isAuthenticated() && projectsShow.project.createdBy.id === main.profilePageId" class="" ui-sref="projectsEdit({ id: projectsShow.project.id})">Edit Item</a>
