--- a/src/js/views/static/about.html
+++ b/src/js/views/static/about.html
@@ -19,7 +19,7 @@
 
           <div class="right">
             <h1>Hannah wynn jones</h1>
-            <p>As an aspiring developer, I am a keen problem solver and coding enthusiast. My Economics degree lead me to a career in finance where I picked up some fantastic skills, but still wanted to be more creative and able to actually build something. I took the plunge and have never looked back.
+            <p>As an aspiring developer, I am a keen problem solver and coding enthusiast. My Economics degree lead me to a career in finance where I picked up some fantastic skills, but still wanted to be more creative and able to actually build something. I took the plunge and have never looked back.</p>
               <p>The projects in the projects section were completed while being a student at General Assembly in London on their 12 week Web Development Immersive Course. </p>
               <p>I’m currently looking for a role in a forward-thinking company which challenges me everyday and where I’m able to expand my knowledge and skillset.</p>
 
