--- a/src/js/views/static/home.html
+++ b/src/js/views/static/home.html
@@ -17,7 +17,7 @@
 <div class="project-div">
   <h2>PROJECTS</h2>
     <p>
-      <a href="www.google.com" target="_blank">GET YOUR OWN BACK!</a>
+      <a href="https://damp-plateau-60284.herokuapp.com/" target="_blank">GET YOUR OWN BACK!</a>
     </p>
     <p>
       <a href="https://blooming-falls-61034.herokuapp.com" target="_blank">Rate my Bake</a>
