--- a/src/js/views/static/about.html
+++ b/src/js/views/static/about.html
@@ -8,7 +8,7 @@
 
 
           <div class="left">
-            <img src="../images/me.jpg" alt="{{ projectsShow.project.name }}">
+            <img src="../images/me.png" alt="hwj">
 
             <div class="contact-icons">
               <a href="https://www.linkedin.com/in/hannahwynnjones/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
