--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -136,11 +136,12 @@ textarea {
   .left {
     position: relative;
     // width: 40%;
-    height: 100%px;
+    height: 100%;
     float: left;
     margin: 30px 0 30px 30px;
     img {
       width: 300px;
+      height: 100%;
     }
   }
 
