--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -7,9 +7,9 @@
     <div class="container">
       <div class="container2">
 
-        <div class="left">
+        <!-- <div class="left">
           <img ng-src="{{ projectsShow.project.imageSRC }}" alt="{{ projectsShow.project.name }}">
-        </div>
+        </div>  -->
 
         <div class="right">
           <a href="{{ projectsShow.project.github }}" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
