--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@ ul {
     float: none;
     .blog {
       width: 100%;
+      height: 400px;
       padding: 20px;
       box-shadow: 0px 0px 42px -3px rgba(0,0,0,0.71);
       border-style: solid;
