--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,10 @@ ul {
       border-style: solid;
       border-color: grey;
       border-width: 2px;
+      h2 {
+        margin: auto 0;
+        height: 100px;
+      }
       .blog-img {
           width: 200px;
           height: 200px;
